--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -89,6 +89,11 @@
 <small class="text-muted">
     Broadside SDS in nearly fully functional, just need to get damage card functionality working.
 </small>
+
+<h4>Ver 1.92</h4>
+<small class="text-muted">
+    Bug when display images in prod
+</small>
 @code {
 
 }
