--- a/Pages/BroadsideSD.razor
+++ b/Pages/BroadsideSD.razor
@@ -174,7 +174,8 @@
 
     private void ChangeOrderImage()
     {
-        selectedShip.selectedOrderImagePath = "/" + OrderCardList[selectedShip.selectedOrderCard].ImagePath;
+        // selectedShip.selectedOrderImagePath = "/" + OrderCardList[selectedShip.selectedOrderCard].ImagePath;
+        selectedShip.selectedOrderImagePath = OrderCardList[selectedShip.selectedOrderCard].ImagePath;
         Console.WriteLine("Selected ship order image path " + selectedShip.selectedOrderImagePath);
         StateHasChanged();
     }
