--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -94,6 +94,11 @@
 <small class="text-muted">
     Bug when display images in prod
 </small>
+
+<h4>Ver 1.93</h4>
+<small class="text-muted">
+    Adding damage cards
+</small>
 @code {
 
 }
