--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -99,6 +99,13 @@
 <small class="text-muted">
     Adding damage cards
 </small>
+
+<h4>Ver 1.94</h4>
+<small class="text-muted">
+    Got hot reload to work
+    Added torpedoes
+    Added ship name field so that it cane be changed if selected classes and not ships
+</small>
 @code {
 
 }
