--- a/Pages/BroadsideSD.razor.css
+++ b/Pages/BroadsideSD.razor.css
@@ -11,9 +11,26 @@
     /*    background-color:green;*/
 }
 
+.main_heading{
+    display:flex;
+    flex:100%;
+    width:800px;
+
+}
+/*.main_heading h4 {
+        display: inline;
+        width: 35%;
+}*/
+.ship_name_heading {
+    display: inline;
+    width: 65%;
+    font-size:xx-large;
+    justify-content:center;
+    margin-left:185px;
+}
 .ship_list_nav_bar_left_container {
     min-width: 150px;
-    background-color: purple;
+    background-color: darkslategrey;
     margin: 5px;
 }
 
@@ -22,6 +39,9 @@
     height: 100%;
     flex-direction: column;
     flex-wrap: wrap;
+
+
+    
 }
 
 /*.ship_container {
@@ -59,21 +79,37 @@
     flex-direction: column;
     min-width: 150px;
     max-width: 200px;
+    margin-left:10px;
     /*    background-color: black;*/
 }
 
+
 .ship_stats {
+    display:block;
+}
+.rename_ship {
+    display:flex;
+    flex-direction:column;
+}
+.input_field {
+    margin-top:2px;
+}
+.rename_ship_input_cl {
+    width: 100%;
 }
 
 .ship_order {
     margin-top: 5px;
     border-style: solid;
-    background-color: red;
+    /*    background-color: red;*/
     /*    max-width:200px;*/
     display: flex;
     flex-direction: column;
 }
 
+.ship_order h5{
+    margin-left:2px;
+}
 
 .ship_order_card_container {
 }
@@ -85,34 +121,58 @@
     display: block;*/
 }
 
+.checkbox_option {
+    background-color:lightgray;
+    margin-top:2px;
+}
+.torpedos {
+}
 
-.damage_cards {
-    margin-top: 5px;
-    border: solid;
-    max-width: 100%;
-    background-color: aqua;
+.ship_order .checkbox_option{
+    margin: 2px;
+}
+
+.ship_order_select {
+    margin: 2px;
 }
 
 .SDS_and_Stats {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    background-color: pink;
+    border: solid;
+    padding: 2px;
+    /*    background-color: pink;*/
 }
+
 
 .stat_input {
     max-width: 50px;
     float: right;
+    margin-right:5px;
     height: 20px;
+}
+
+.damage_cards {
+    margin-top: 5px;
+    border: solid;
+    max-width: 100%;
+    padding: 2px;
+    /*    background-color: aqua;*/
 }
 
 .damage_cards_container {
     display: flex;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
 }
 
 .damage_card_and_delete {
     flex-direction: column;
+}
+
+.add_damage_card {
+    padding:0px;
+    background-color:lightcoral;
 }
 
 .damage_card {
@@ -121,7 +181,7 @@
 
 @media only screen and (max-width: 1130px) {
     .main {
-        background-color: lightblue;
+/*        background-color: lightblue;*/
     }
 
     .ship_current_stats_and_order {
@@ -136,5 +196,8 @@
     .ship_stats {
         min-width: 180px;
         margin-right: 30px;
+    }
+    .torpedos {
+        min-width:200px;
     }
 }
