--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -106,6 +106,11 @@
     Added torpedoes
     Added ship name field so that it cane be changed if selected classes and not ships
 </small>
+
+<h4>Ver 1.95</h4>
+<small class="text-muted">
+    Added 4 new british classes of ships
+</small>
 @code {
 
 }
