--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -111,6 +111,12 @@
 <small class="text-muted">
     Added 4 new british classes of ships
 </small>
+
+<h4>Ver 1.96</h4>
+<small class="text-muted">
+    Adding advance veiw to see critical ship stats in one view
+</small>
+
 @code {
 
 }
