--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -117,6 +117,11 @@
     Adding advance veiw to see critical ship stats in one view
 </small>
 
+<h4>Ver 1.97</h4>
+<small class="text-muted">
+    Update damage card numbers in summary when a card is removed
+</small>
+
 @code {
 
 }
