--- a/Pages/BroadsideSD.razor.css
+++ b/Pages/BroadsideSD.razor.css
@@ -29,12 +29,13 @@
     width: 65%;
     font-size:xx-large;
     justify-content:center;
-    margin-left:185px;
+    margin-left:210px;
 }
 .ship_list_nav_bar_left_container {
-    min-width: 150px;
+    min-width: 190px;
     background-color: darkslategrey;
     margin: 5px;
+    margin-top:-40px;
 }
 
 .ship_sds_status_right_container {
@@ -53,22 +54,32 @@
 .ship_button_advanced {
     display: block;
     min-width: 150px;
-    margin: 5px;
+    margin: 2px;
     padding-top:5px;
+    background-color:burlywood;
 }
 
 .ship_label_adanced {
     margin-left:4px;
     font-size:14px;
+    background-color:white;
+    margin-bottom:2px;
 }
+
+
 .toggle_advanced_list {
     margin-top: 50px;
+    margin-left:5px;
     height: 30px;
     width: 150px;
+    background-color:aquamarine;
 }
 
 .advanced_ship_view {
-    background-color: aqua;
+/*    background-color: aqua;*/
+margin:2px;
+border:ridge;
+
 }
 .ship_image {
 }
@@ -198,5 +209,8 @@
     }
     .torpedos {
         min-width:200px;
+    }
+    .ship_list_nav_bar_left_container {
+        min-width: 190px;
     }
 }
