--- a/Shared/PopContainer.razor
+++ b/Shared/PopContainer.razor
@@ -14,7 +14,7 @@
 @code {
     public bool Show { get; set; }
     [Parameter] public string Title { get; set; } = "Delete";
-    [Parameter] public string Class { get; set; } = "btn btn-danger";
+    [Parameter] public string Class { get; set; } = "btn btn-danger deleteButtton";
     [Parameter] public string Message { get; set; } = "Are you sure?";
     // [Parameter] public EventCallback<bool> ConfirmedChanged { get; set; }
     [Parameter] public int idOfelement { get; set; } = 0;
