--- a/Pages/ReadMe.razor
+++ b/Pages/ReadMe.razor
@@ -122,6 +122,12 @@
     Update damage card numbers in summary when a card is removed
 </small>
 
+<h4>Ver 1.98</h4>
+<small class="text-muted">
+    Starting to port unit db from Navalgame.
+    Dont want any of the unit DB to be visible in prod
+    This version is to test that unit db cant be accessed in prod
+</small>
 @code {
 
 }
