testing env variables again

--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -43,13 +43,16 @@
 
 
             if(@Env.IsDevelopment()) {
-                <div class="nav-item px-3">
-                    @* //only want this visible in dev *@
-                    <NavLink class="nav-link" href="unitsDB">
-                        <span class="oi oi-plus" aria-hidden="true"></span> Unit DB
-                    </NavLink>
-                </div>
 
+            <div class="nav-item px-3">
+                @* //only want this visible in dev *@
+                <NavLink class="nav-link" href="unitsDB">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Unit DB
+
+                </NavLink>
+
+            </div>
+            <labe style="color:white">Env name = @envName</labe>
             }
 
         </nav>
@@ -63,7 +66,7 @@
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
     private static List<RuleSet> RuleSets = new List<RuleSet>();
 
-
+    private string envName;
     [CascadingParameter] 
     private RouteData routeData { get; set; } = default!;
 
@@ -77,6 +80,8 @@
     {
         var response = await ULSC.GetRuleSets();
         RuleSets = response.Data;
+        envName = Env.Environment.ToString();
+
     }
 
 
