--- a/Pages/UnitsDB.razor
+++ b/Pages/UnitsDB.razor
@@ -8,71 +8,86 @@
 @inject NavigationManager NM
 @inject ILogger<Index> _logger;
 
-    @* This page shouldnt be visible in prod *@
+@* This page shouldnt be visible in prod *@
 <div  hidden="@Env.IsProduction()">
 
-<h3>List of all units in the database</h3>
-<div class="btn-group" role="group" aria-label="Basic example">
-    <button type="button" @onclick="() => AddUnit()" class="btn btn-secondary fa fa-plus"> Add unit to Database</button>
-</div>
+    <h3>List of all units in the database</h3>
+    <div class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" @onclick="() => AddUnit()" class="btn btn-secondary fa fa-plus"> Add unit to Database</button>
+    </div>
 
 
     @if(listOfUnitsWIthGSDetail == null || listOfUnitsWIthGSDetail.Count == 0)
-{
-    <span>Loading Units</span>
-}
+    {
+        <span>Loading Units</span>
+    }
 
-   <table class="table table-striped table-bordered">
-       
+    <table class="table table-striped table-bordered">
+
         <thead class="thead-dark">
 
-                <tr>
-                    <th scope="col">Country</th>
+            <tr>
+                <th scope="col">Country</th>
 
-                    <th scope="col">Type</th>
-                    <th scope="col">Class</th>
-                    <th scope="col">Names</th>
-                    <th scope="col" style="width:20%;">Games added too</th>
-                    <th scope="col">Edit/Delete</th>
-                </tr>
+                <th scope="col">Type</th>
+                <th scope="col">Class</th>
+                <th scope="col">Names</th>
+                <th scope="col" style="width:20%;">Games added too</th>
+                <th scope="col">Edit/Delete</th>
+            </tr>
 
         </thead>
- <tbody>
-@foreach (var u in listOfUnitsWIthGSDetail)
-{
-    <tr>
-
-      <td>@u.Unit.Country.CountryName</td>
-      <td>@u.Unit.SubUnitType.SubUnitName</td>
-      <td>@u.Unit.Name_ClassName</td>
-      <td>@u.Unit.ShipsSubsInClass</td>
-      <td>
-
-            @foreach (var gs in @u.GameSpecificDetailList)
+        <tbody>
+            @foreach (var u in listOfUnitsWIthGSDetail)
             {
-                <p>@gs.Ruleset.RulesetName.</p>
-            }
+                <tr>
 
-   </td>
-     
-      <td><a href="/addEditDeleteUnit/@u.Id?returnUrl=@NM.ToBaseRelativePath(NM.Uri)"><input type="button" value="Edit"></a></td>
-    </tr>
-}
-    </tbody>
-   </table>
+                    <td>@u.Unit.Country.CountryName</td>
+                    <td>@u.Unit.SubUnitType.SubUnitName</td>
+                    <td>@u.Unit.Name_ClassName</td>
+                    <td>@u.Unit.ShipsSubsInClass</td>
+                    <td>
+
+                        @if (@u.GameSpecificDetailList.Count > 0)
+                        {
+                            @foreach (var gs in @u.GameSpecificDetailList)
+                            {
+                                <p>@gs.Ruleset.RulesetName.</p>
+                            }
+
+                        }
+
+                    </td>
+
+                    <td><a href="/addEditDeleteUnit/@u.Id?returnUrl=@NM.ToBaseRelativePath(NM.Uri)"><input type="button" value="Edit"></a></td>
+                </tr>
+            }
+        </tbody>
+    </table>
 
 </div>
 @code {
 
     public List<UnitWithGameSystemDetails> listOfUnitsWIthGSDetail { get; set; } = new List<UnitWithGameSystemDetails>();
-    
+
 
     protected override async Task OnInitializedAsync()
     {
 
+        Console.WriteLine("In OnInitializedAsync in unitsdb");
         var resUnits = await ULSC.GetListofAllGameUnitsWithGameSpecDetails();
+        Console.WriteLine("resUnits data = " + resUnits.Data.Count());
         listOfUnitsWIthGSDetail = resUnits.Data;
 
+        Console.WriteLine("listOfUnitsWIthGSDetail length = " + listOfUnitsWIthGSDetail.Count());
+
+        foreach (var u in listOfUnitsWIthGSDetail)
+        {
+            Console.WriteLine(u.Unit.Country.CountryName + " " + u.Unit.SubUnitType.SubUnitName + "  " + u.Unit.Name_ClassName
+            + "  " + u.Unit.ShipsSubsInClass);
+
+     
+            }
         //StateHasChanged();
     }
 
